--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "date-utils": "^1.2.21",
     "express": "^4.17.1"
   },
   "engines": {
